feat: create validations (#3)
* feat: create validation on account creation

* fix: add the rule when the digit is 10

* feat: create validation on transfer creation

* feat: add new route to list transfers for a user

* feat: add balance display route

* refactor: change getBalance return

* refactor: change function returns from boolean to error

* refactor: change parameter of UpdateBalance function

* style: correct function names

* refactor: change date format on account and transfer

* refactor: adjust the usecases to know only their respective methods

* refactor: change local account structure in handler

* style: rename test function

* refactor: remove account methods from transfer usecase

* doc: update swagger with new routes

* refactor: change return method from login

* chore: remove bin

* refact:change order to check before creating an account
