# gateways/http/transfer/transfer.go
@@ -2,9 +2,9 @@ package transfer
 
 import (
 	"encoding/json"
-	"log"
 	"net/http"
 
+	"github.com/francisleide/ChallengeGo/domain/account"
 	"github.com/francisleide/ChallengeGo/domain/transfer"
 	"github.com/francisleide/ChallengeGo/gateways/http/middleware"
 	"github.com/gorilla/mux"
@@ -12,14 +12,22 @@ import (
 
 type Handler struct {
 	transfer transfer.UseCase
+	account  account.UseCase
 }
 
-func Transfer(serv *mux.Router, usecase transfer.UseCase) *Handler {
+type TransferInput struct {
+	AccountDestinationID string  `json: "accountdestinationid"`
+	Amount               float64 `json: "amount"`
+}
+
+func Transfer(serv *mux.Router, usecase transfer.UseCase, accountUC account.UseCase) *Handler {
 	h := &Handler{
 		transfer: usecase,
+		account:  accountUC,
 	}
 
-	serv.HandleFunc("/transfer", h.CreateTransfer).Methods("Post")
+	serv.HandleFunc("/transfers", h.CreateTransfer).Methods("Post")
+	serv.HandleFunc("/transfers", h.ListUserTransfers).Methods("Get")
 
 	return h
 }
@@ -32,25 +40,90 @@ func Transfer(serv *mux.Router, usecase transfer.UseCase) *Handler {
 // @Accept  json
 // @Produce  json
 // @Header 201 {string} Token "request-id"
-// @Router /transfer [post]
+// @Router /transfers [post]
 func (h Handler) CreateTransfer(w http.ResponseWriter, r *http.Request) {
-	var tr transfer.TransferInput
+	var tr TransferInput
 	accountID, ok := middleware.GetAccountID(r.Context())
 	if !ok || accountID == "" {
 		w.Header().Set("Content-Type", "application/json")
 		w.WriteHeader(r.Response.StatusCode)
 		return
 	}
+
 	decoder := json.NewDecoder(r.Body)
 	err := decoder.Decode(&tr)
+
 	if err != nil {
-		log.Fatal(err)
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(r.Response.StatusCode)
+		return
 	}
-	_, error := h.transfer.CreateTransfer(accountID, tr.DestinationCPF, tr.Amount)
+	accountOrigin, errOrigin := h.account.GetAccountByCPF(accountID)
+	if errOrigin != nil {
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(r.Response.StatusCode)
+		return
+	}
+
+	accountDestination, errorDestine := h.account.GetAccountByID(tr.AccountDestinationID)
+	if errorDestine != nil {
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(r.Response.StatusCode)
+		return
+	}
+	err = h.account.Withdraw(accountID, tr.Amount)
+	if err != nil {
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(r.Response.StatusCode)
+		return
+	}
+
+	err = h.account.Deposit(accountDestination.CPF, tr.Amount)
+	if err != nil {
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(r.Response.StatusCode)
+		return
+	}
+
+	_, error := h.transfer.CreateTransfer(accountOrigin, accountDestination, tr.Amount)
 	if error != nil {
 		w.WriteHeader(r.Response.StatusCode)
 		return
 	}
 
 	w.Header().Set("Content-Type", "application/json")
+}
+
+// ShowAccount godoc
+// @Summary List transfers from a user
+// @Description Transfer between accounts. The account that will make the transfer must be authenticated with a token.
+// @Param Body body []entities.Transfer true "Body"
+// @Param Authorization header string true "Bearer Authorization Token"
+// @Accept  json
+// @Produce  json
+// @Header 201 {string} Token "request-id"
+// @Router /transfers [get]
+func (h Handler) ListUserTransfers(w http.ResponseWriter, r *http.Request) {
+	accountCPF, ok := middleware.GetAccountID(r.Context())
+	if !ok || accountCPF == "" {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	account, err := h.account.GetAccountByCPF(accountCPF)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	transfers, errList := h.transfer.ListUserTransfers(account.ID)
+	if errList != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	errList = json.NewEncoder(w).Encode(transfers)
+	if errList != nil {
+		w.WriteHeader(http.StatusBadRequest)
+	}
+
 }
